# MultiModal_Damage_Claim_Verification_System

./: .gitignore  .vercelignore  README.md  app.py  index.py  pyproject.toml  requirements.txt  vercel.json
api/: claims.py  metrics.py  run.py
code/: README.md  claims_data.json  dashboard_server.py  generate_static_data.py  index.html  main.py  verification_engine.py
code/evaluation/: evaluation_report.md  main.py  spot_check.py
dataset/: output.csv
