[project]
name = "claimvision-ai"
version = "0.1.0"
description = "Multi-Modal Damage Claim Verification System"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pillow>=9.5.0",
    "opencv-python-headless>=4.7.0.72",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "pydantic>=2.0"
]

[tool.vercel]
entrypoint = "code.dashboard_server:app"
