[project]
name = "multimodal-damage-claim-verification"
version = "1.0.0"
description = "Multi-Modal Evidence Review System for Insurance Claims"
authors = [
    {name = "ClaimAI Team"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pillow>=9.5.0",
    "opencv-python-headless>=4.7.0.72",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "huggingface_hub>=0.23.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"